# mlip-finetune

./: .gitignore  README.md  pyproject.toml
examples/: extract_fisher_example.py  train_ewc.py  train_example.py  train_naive.py
examples/configs/: ewc_finetune.yaml  naive_finetune.yaml
examples/wandb/: latest-run
examples/wandb/run-20260116_111642-kep0alzx/: run-kep0alzx.wandb
examples/wandb/run-20260116_112221-4shoj2gl/: run-4shoj2gl.wandb
examples/wandb/run-20260116_112511-d5ic4nxi/: run-d5ic4nxi.wandb
examples/wandb/run-20260116_112511-d5ic4nxi/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
examples/wandb/run-20260116_112533-cwbmirlk/: run-cwbmirlk.wandb
examples/wandb/run-20260116_112533-cwbmirlk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
examples/wandb/run-20260116_112748-8ottawrt/: run-8ottawrt.wandb
examples/wandb/run-20260116_112748-8ottawrt/files/: config.yaml  wandb-metadata.json  wandb-summary.json
mlip_finetune/: __init__.py  cli.py  test.py
mlip_finetune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlip_finetune/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  parity_plot_callback.py  tensorboard.py  wandb_callback.py
mlip_finetune/configs/: __init__.py  config.py
mlip_finetune/data/: __init__.py  collate.py  datasets.py  vasp_converter.py
mlip_finetune/keys/: __init__.py  mace.py  nequip.py  registry.py  standard.py
mlip_finetune/metrics/: __init__.py  atomic.py  registry.py
mlip_finetune/models/: __init__.py  base.py  nequip_wrapper.py
mlip_finetune/strategies/: __init__.py  base.py  ewc.py  naive.py
mlip_finetune/test_data/: __init__.py  bto_100.xyz
mlip_finetune/trainers/: __init__.py  trainer.py
mlip_finetune/utils/: __init__.py  fisher.py  plotting.py
tests/: __init__.py  test_metrics.py  test_strategies.py  test_training_integration.py
